# pyclinsci

./: .gitignore  contributing.md  license.md  makefile  pyproject.toml  readme.md
docs/src/: conf.py  contributing.md  index.rst  readme.md
examples/: test_data.ipynb  test_settings.ipynb
examples/output/: geodata_europe.xlsx
src/pyclinsci/: __init__.py  _data.py  _decorators.py  _files.py  _settings.py
src/pyclinsci/ini_files/: geodata.iso3.ini
tests/: __init__.py  test_pyclinsci_data.py  test_pyclinsci_settings.py
